# credit-data-platform

./: .gitignore  .sqlfluff  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dbt-prod.yml  docs.yml
bi/: README.md
bi/pages/: finops.md  index.md  risk-cohorts.md  vintage-curves.md
docs/: brief.md  calibration-sources.md
docs/adr/: 0001-dual-target-warehouse.md  0002-synthetic-generator-architecture.md  0003-external-parquet-sources-and-schema-mapping.md  0004-multi-product-extension.md  0005-dimensional-layer-and-event-sourced-loan-state.md  0006-risk-marts-methodology.md  0007-ifrs9-ecl-methodology.md  0008-orchestration-dagster-asset-centric.md  0009-observability-elementary.md  0010-security-ci-layer.md  0011-semantic-layer-and-evidence-dashboard.md  0012-iceberg-landing-zone.md  0013-bigquery-terraform.md
models/dwh/: _dwh__models.yml  dim_borrower.sql  dim_date.sql  dim_loan.sql  dim_loan_current_state.sql  dim_product.sql  fct_loan_lifecycle.sql  fct_loan_origination.sql  fct_loan_state_event.sql  fct_payment.sql
models/metricflow/: _metricflow__models.yml  metricflow_time_spine.sql
models/semantic/: _sem_prepayment.yml
models/staging/: _loanbook__sources.yml  _staging__models.yml  stg_loanbook__borrower.sql  stg_loanbook__loan.sql  stg_loanbook__monthly_performance.sql
seeds/: ecl_ead_parameters.csv  ecl_lgd_parameters.csv  ecl_scenario_weights.csv  ecl_watchlist.csv
src/ecl_backtest/: backtest.py  validate_parameters.py
src/loanbook/: __init__.py  __main__.py  amortization.py  borrowers.py  calibration.py  generate.py  iceberg.py  loans.py  months.py  output.py  performance.py  products.py  revolving.py  state_machine.py
src/orchestration/: __init__.py  checks.py  definitions.py  materialize.py
terraform/: main.tf  terraform.tfvars.example
tests/: conftest.py  test_amortization.py  test_borrowers.py  test_calibration.py  test_cli.py  test_dbt_dwh.py  test_dbt_ecl_marts.py  test_dbt_project.py  test_dbt_risk_marts.py  test_dbt_staging.py  test_ecl_backtest.py  test_evidence_dashboard.py  test_generate.py  test_iceberg.py  test_loans.py  test_orchestration_checks.py  test_orchestration_definitions.py  test_orchestration_materialize.py  test_output.py  test_performance.py  test_products.py  test_reproducibility.py  test_revolving.py  test_semantic_layer.py  test_state_machine.py
tests/dbt/: assert_dwh_current_state_matches_event_stream.sql  assert_dwh_lifecycle_milestone_order.sql  assert_dwh_no_negative_ending_balance.sql  assert_dwh_payment_balance_reconciliation.sql  assert_dwh_payment_flags_mutually_exclusive.sql  assert_dwh_scd2_one_current_row_per_borrower.sql  assert_dwh_scd2_valid_from_monotonic.sql  assert_dwh_scd2_valid_to_chain_integrity.sql  assert_dwh_valid_delinquency_transitions.sql  assert_mart_risk_cpr_formula.sql  assert_mart_risk_cpr_in_unit_interval.sql  assert_mart_risk_roll_rate_no_negative_self_transition.sql  assert_mart_risk_smm_in_unit_interval.sql  (+9 more)
(+27 files in other folders)
