[project]
name = "credit-data-platform"
version = "0.1.0"
description = "Multi-product consumer-credit data platform: calibrated synthetic loan book, dimensional + event-sourced dbt warehouse, IFRS 9 ECL, semantic layer, observability"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dbt-core>=1.11.11",
    "numpy>=2.4.6",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loanbook"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "dbt-duckdb>=1.10.1",
    "sqlfluff>=4.2.2",
    "sqlfluff-templater-dbt>=4.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
