[project]
name = "credit-data-platform"
version = "0.1.0"
description = "Multi-product consumer-credit data platform: calibrated synthetic loan book, dimensional + event-sourced dbt warehouse, IFRS 9 ECL, semantic layer, observability"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dbt-core>=1.11.11",
    "numpy>=2.4.6",
    "pyarrow>=24.0.0",
    "pandas>=2.2.0",
    "duckdb>=1.2.0",
    "dagster>=1.13.9",
    "dagster-dbt>=0.29.9",
    "pyiceberg[sql-sqlite,pyarrow]>=0.9.0",
    "dbt-bigquery>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loanbook", "src/ecl_backtest", "src/orchestration"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "dbt-duckdb>=1.10.1",
    "sqlfluff>=4.2.2",
    "sqlfluff-templater-dbt>=4.2.2",
    "dagster-webserver>=1.13.9",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "elementary-data[duckdb]>=0.24.0,<0.26.0",
    "dbt-metricflow>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "RUF", "C4", "FURB", "RET", "TC", "FA"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
# Scan src/ only (tests intentionally use asserts and crafted SQL strings).
exclude_dirs = ["tests", ".venv"]
